--- a/css/symb/main.css
+++ b/css/symb/main.css
@@ -2,8 +2,7 @@
  * 
  **/
 body{
-	width: 80%;
-	min-width:1400px;
+	width: fit-content;
 	margin-top:0px;
 	font-family: Verdana, Geneva, sans-serif;
 	background-color:#e9e9e9;
@@ -12,7 +11,7 @@ body{
 
 /*Main table framework*/
 #maintable{
-	width: 100%;
+	width: fit-content;
 	background-color:#FFFFFF;
 	border:1px solid grey;
 }
@@ -63,7 +62,13 @@ div.tnimg a{
 
 div.tnimg img{
 
-}	
+}
+
+@media screen and (min-width: 1350px){
+	body{
+		width: 80% !important;
+	}
+}
 
 #cloptiondiv {
 }
